Create inplace (parameter) reminder

--- a/pandas_03.ipynb
+++ b/pandas_03.ipynb
@@ -97,6 +97,18 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Frequent Reminder\n",
+    "It is good practice to see your changes first by not setting inplace to True.  \n",
+    "If changes are confirmed, you can set inplace to True.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
