--- a/pandas_05a.ipynb
+++ b/pandas_05a.ipynb
@@ -101,7 +101,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## Assigning Columns\n",
+    "## Assigning Columns Labels\n",
     "We can assign or rename columns in a 2 ways:  \n",
     "- Using the `.columns` attribute\n",
     "- Using the `.rename()` method\n",
@@ -115,7 +115,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### Assigning Columns Using The .columns Attribute \n",
+    "### Assigning Column Labels Using The .columns Attribute \n",
     "We can assign or rename columns by assigning an iterable of whose length is equal to the number of columns, to the DataFrames' columns attribute.  \n",
     "**Note:** this modifies the original df in-place.\n",
     "\n",
@@ -398,11 +398,23 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### Assigning Columns Using The .rename() Method \n",
+    "### Assigning Column Labels Using The .rename() Method \n",
     "We can assign or rename columns by passing a dict of any length into the `columns` parameter of the `.rename()` method. The dict should have the name of the column to be replaced as the key, and the new column name as the value, i.e.    \n",
     "{\"old_colname\": \"new_colname\", \"old2\": \"new2\"}  \n",
     "\n",
     "**Note:** this does not modify the original df. Use inplace=True as parameter to modify original df.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Frequent Reminder\n",
+    "It is good practice to see your changes first by not setting inplace to True.  \n",
+    "If changes are confirmed, you can set inplace to True.\n",
     "\n",
     "---"
    ]
