Add missing text about NaN

--- a/pandas_05a.ipynb
+++ b/pandas_05a.ipynb
@@ -1955,7 +1955,7 @@
     "x = df[\"first\"].map({\"Foo\": \"Johnny\", \"Jane\": \"Mary\"})\n",
     "display(x)\n",
     "\n",
-    "# Notice how NaN"
+    "# Notice how NaN is used to replace anything that was unchanged."
    ]
   },
   {
