--- a/pandas_05b.ipynb
+++ b/pandas_05b.ipynb
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +897,79 @@
     "\n",
     "# After confirming, apply the change.\n",
     "df.rename(columns={\"ConvertedCompYearly\": \"SalaryUSD\"}, inplace=True)\n",
-    "display(df.head())\n"
+    "display(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "38071"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check how many non-null salaries in df\n",
+    "df[\"SalaryUSD\"].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ResponseId\n",
+       "1          NaN\n",
+       "2        False\n",
+       "3        False\n",
+       "4        False\n",
+       "5        False\n",
+       "         ...  \n",
+       "73264     True\n",
+       "73265     True\n",
+       "73266     True\n",
+       "73267    False\n",
+       "73268      NaN\n",
+       "Name: TBranch, Length: 73268, dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "numpy.int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Replace Yes No answers to booleans in the \"TBranch\" column\n",
+    "# TBranch answers the question: Would you like to participate in the Professional Developer Series?\n",
+    "# According to the schema.\n",
+    "df_temp = df[\"TBranch\"].replace({\"Yes\": True, \"No\": False})\n",
+    "\n",
+    "# Apply change\n",
+    "df[\"TBranch\"].replace({\"Yes\": True, \"No\": False}, inplace=True)\n",
+    "display(df[\"TBranch\"])\n",
+    "\n",
+    "# Find out how many wants to join the Professional Developer Series\n",
+    "n_true = df.loc[df[\"TBranch\"] == True][\"TBranch\"].count()\n",
+    "display(n_true)"
    ]
   }
  ],
