Rename from pandas to pandas_01b

--- a/pandas_01b.ipynb
+++ b/pandas_01b.ipynb
@@ -5,10 +5,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Loading Data\n",
-    "Loading CSV as **dataframe**\n",
-    "Data set from stackoverflow deveoper 2022 [survey](https://info.stackoverflowsolutions.com/rs/719-EMH-566/images/stack-overflow-developer-survey-2022.zip).  \n",
-    "[Past surveys](https://insights.stackoverflow.com/survey)"
+    "---\n",
+    "# Loading Data, and pandas Data Structures\n",
+    "Loading CSV as **DataFrame**. CSV data set from stackoverflow deveoper 2022 [survey](https://info.stackoverflowsolutions.com/rs/719-EMH-566/images/stack-overflow-developer-survey-2022.zip).  \n",
+    "[Past surveys](https://insights.stackoverflow.com/survey)  \n",
+    "\n",
+    "Pandas has two main data structures for handling tabular data: `Series` and `DataFrames` \n",
+    "\n",
+    "---"
    ]
   },
   {
