--- a/pandas_02.ipynb
+++ b/pandas_02.ipynb
@@ -5,8 +5,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "# Row and Column Selection\n",
-    "Selecting rows and columns of **dataframe** and **series**. "
+    "Selecting rows and columns of **dataframe** and **series**. \n",
+    "\n",
+    "---"
    ]
   },
   {
