--- a/pandas_04a.ipynb
+++ b/pandas_04a.ipynb
@@ -5,8 +5,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "# Filtering\n",
-    "Using conditionals to filter rows and columns."
+    "Using conditionals to filter rows and columns.\n",
+    "\n",
+    "---"
    ]
   },
   {
