--- a/pandas_04b.ipynb
+++ b/pandas_04b.ipynb
@@ -5,7 +5,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Filtering Example on stackoverflow Data Set"
+    "---\n",
+    "# Filtering Example on stackoverflow Data Set\n",
+    "\n",
+    "\n",
+    "---"
    ]
   },
   {
