--- a/pandas_05a.ipynb
+++ b/pandas_05a.ipynb
@@ -5,8 +5,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "# Modifying Data in DataFrames\n",
-    "Updating rows, columns, and cells."
+    "Updating rows, columns, and cells.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -1446,11 +1449,13 @@
    "source": [
     "### Axes Quick Reference\n",
     "\n",
-    "`axis=\"rows\" or axis=0`  \n",
-    "(Default)\n",
+    "`axis=\"rows\" or axiis=\"index\" or axis=0`  \n",
+    "(Default)  \n",
+    "\"Apply to each row\"  \n",
     "Refers to the vertical axis, or \"rows\"\n",
     "\n",
     "`axis=\"columns\" or axis=1`  \n",
+    "\"Apply to each column\"  \n",
     "Refers to the horizontal axis, or \"columns\"\n",
     "\n",
     "\n",
@@ -1688,9 +1693,10 @@
     "# This is because the len is not applied on the individual cells,\n",
     "# but on all the Series (indicated by the labels) of the DataFrame \n",
     "# instead. In this case, it applies the len() function to all \n",
-    "# Series (the vertical axis or \"rows\" axis). This means that the values\n",
-    "# 3, 3, 3 are the results of running len() on the \"first\", \"last\",\n",
-    "# and \"email\" Series i.e. the number of values in that Series.\n",
+    "# Series (the vertical axis or \"rows\" or \"index\" axis). This means \n",
+    "# that the values 3, 3, 3 are the results of running len() on the \n",
+    "# \"first\", \"last\", and \"email\" Series i.e. the number of values in \n",
+    "# that Series.\n",
     "\n",
     "# To apply a function to all the values in the DataFrame, use applymap()"
    ]
@@ -1976,7 +1982,7 @@
     "\n",
     "This functions like the `apply()` method when `apply()` method is used on a Series, except for the keyword arguments.\n",
     "\n",
-    "**Note:** this method does not modify the original df. Can modify the original by setting the inplace parameter to True.\n",
+    "**Note:** this method does not modify the original df. Modify the original by setting the inplace parameter to True.\n",
     "\n",
     "---"
    ]
@@ -2241,7 +2247,7 @@
    "source": [
     "# Update last names using iterables\n",
     "display(df)\n",
-    "df.replace([\"Bar\", \"Doe\"], [\"Doe\", \"Smith\"])\n"
+    "df.replace([\"Bar\", \"Doe\"], [\"Doe\", \"Smith\"])"
    ]
   },
   {
