--- a/pandas_05b.ipynb
+++ b/pandas_05b.ipynb
@@ -5,7 +5,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Modifying Data on stackoverflow Data Set"
+    "---\n",
+    "# Modifying Data on stackoverflow Data Set\n",
+    "\n",
+    "---"
    ]
   },
   {
