--- a/pandas_03.ipynb
+++ b/pandas_03.ipynb
@@ -5,8 +5,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "# Indices (Indexes?)\n",
-    "How to use, set, and reset indices."
+    "How to use, set, and reset indices.\n",
+    "\n",
+    "---"
    ]
   },
   {
