--- a/pandas_01a.ipynb
+++ b/pandas_01a.ipynb
@@ -9,19 +9,156 @@
     "# Pandas Data Structures\n",
     "Pandas has two main data structures for handling tabular data: `Series` and `DataFrames` \n",
     "\n",
-    "#TODO - creating series and frames from python structures\n",
-    "\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing pandas and numpy as pd, np, respectively.\n",
+    "# These shorthand names are common practice.\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "# display() function works like print, but it shows the\n",
+    "# output in its rich display format if possible\n",
+    "from IPython.display import display"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Series\n",
+    "\n",
+    "A series is a homogenous one-dimensional labeled array that can hold any data type (but only 1 type; homogenous). The axis labels are collectively referred to as the **index**.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Creating a Series\n",
+    "\n",
+    "You can use the Series class to create a Series.  \n",
+    "\n",
+    "`new_series = pd.Series(data, index=index)`\n",
+    "\n",
+    "Where **data** is the data to be converted into a Series, and **index** is iterable that contains the labels. If **index** is not set, default integer index will be set (incrementing from 0).\n",
+    "\n",
+    "**data** can be of different structures:\n",
+    "\n",
+    "- a Python dict\n",
+    "- a NumPy ndarray\n",
+    "- a scalar value (like 38)\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Creating a DataFrame\n",
+    "\n",
+    "You can use the DataFrame class to create a Series.  \n",
+    "\n",
+    "`new_df = pd.DataFrame(data, index=index)`\n",
+    "\n",
+    "Where **data** is the data to be converted into a DataFrame, and **index** is iterable that contains the labels. If **index** is not set, default integer index will be set (incrementing from 0).\n",
+    "\n",
+    "**data** can be of different structures:\n",
+    "\n",
+    "- a Python dict\n",
+    "- a NumPy ndarray\n",
+    "- a scalar value (like 38)\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    0.459879\n",
+       "1   -0.175351\n",
+       "2   -0.099661\n",
+       "3   -0.049443\n",
+       "4   -1.343458\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = np.random.randn(5)\n",
+    "s = pd.Series(data)\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Passing in a dict\n",
+    "data = {\"Foo\": [2, 5, 5], \"Bar\": [9, 2, 7]}\n",
+    "display(data)\n",
+    "\n",
+    "s = pd.Series(data)\n",
+    "df = pd.DataFrame(data, index=range(3))\n",
+    "\n",
+    "display(s, df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Passing in a dict with list as value\n",
+    "data = {\"Foo\": [2, 5, 5], \"Bar\": 9}\n",
+    "display(data)\n",
+    "\n",
+    "s = pd.Series(data)\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "display(s, df)"
    ]
   }
  ],
