--- a/pandas_01b.ipynb
+++ b/pandas_01b.ipynb
@@ -20,7 +20,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from IPython.display import display"
    ]
   },
   {
