Finish Series section

--- a/pandas_01a.ipynb
+++ b/pandas_01a.ipynb
@@ -51,10 +51,14 @@
    "metadata": {},
    "source": [
     "---\n",
+    "---\n",
     "## Series\n",
     "\n",
-    "A series is a homogenous one-dimensional labeled array that can hold any data type (but only 1 type; homogenous). The axis labels are collectively referred to as the **index**.\n",
+    "A series is a homogenous one-dimensional labeled array that can hold any data type (but only 1 type; homogenous). The axis labels are collectively referred to as the **index**. \n",
+    " \n",
+    "A Series acts like an ndarray (numpys) and thus most numpy functions that work on an ndarray will work on a Series.\n",
     "\n",
+    "---\n",
     "---"
    ]
   },
@@ -87,7 +91,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "#### Python dict as Data\n",
+    "#### **Series:** Python dict as Data\n",
     "\n",
     "When passing in a Python dict, the keys will act as the labels. If an index is passed, it will be the size of the Series instead of the data's size. If an index is passed, it will check against the dict keys, and order the Series according to the order of the index. Values in the index that do not exist in the dict passed to data will be represented as NaN.\n",
     "\n",
@@ -142,11 +146,12 @@
     }
    ],
    "source": [
-    "# Creating a Series by passing a dict\n",
+    "# Create a dict\n",
     "data = {\"a\": 2, \"b\": 4, \"c\": 6}\n",
     "display(data)\n",
     "printhr()\n",
     "\n",
+    "# Create Series\n",
     "s = pd.Series(data)\n",
     "display(s)\n",
     "\n",
@@ -159,14 +164,27 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### **Series:** NumPy ndarray as Data\n",
+    "\n",
+    "A numpy ndarray of 1-dimension can be passed as data.\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 1.12998975, -1.07812134,  0.26063663, -0.82503337, -0.53188494])"
+       "array([-0.19592179, -0.77636675,  0.17576476, -0.67781818,  0.31553633])"
       ]
      },
      "metadata": {},
@@ -182,11 +200,11 @@
     {
      "data": {
       "text/plain": [
-       "4    1.129990\n",
-       "3   -1.078121\n",
-       "2    0.260637\n",
-       "1   -0.825033\n",
-       "0   -0.531885\n",
+       "4   -0.195922\n",
+       "3   -0.776367\n",
+       "2    0.175765\n",
+       "1   -0.677818\n",
+       "0    0.315536\n",
        "dtype: float64"
       ]
      },
@@ -196,11 +214,11 @@
     {
      "data": {
       "text/plain": [
-       "0    1.129990\n",
-       "1   -1.078121\n",
-       "2    0.260637\n",
-       "3   -0.825033\n",
-       "4   -0.531885\n",
+       "0   -0.195922\n",
+       "1   -0.776367\n",
+       "2    0.175765\n",
+       "3   -0.677818\n",
+       "4    0.315536\n",
        "dtype: float64"
       ]
      },
@@ -209,12 +227,13 @@
     }
    ],
    "source": [
-    "# Series using a numpy ndarray\n",
+    "# Create an ndarray\n",
     "data = np.random.randn(5)\n",
     "display(data)\n",
     "printhr()\n",
     "\n",
-    "# Index in descending order\n",
+    "# Create a Series\n",
+    "# Index in descending order using pd.RangeIndex()\n",
     "s = pd.Series(data, index=pd.RangeIndex(4, -1, -1))\n",
     "display(s)\n",
     "\n",
@@ -229,10 +248,68 @@
    "metadata": {},
    "source": [
     "---\n",
+    "#### **Series:** Scalar Value as Data\n",
+    "\n",
+    "Passing a scalar value will result in a Series of length 1. If an index is passed, the value will be copied match the length of the index. A scalar value is an object with no dimension, or is not a collection.\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    4.2\n",
+       "dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "i    4.2\n",
+       "n    4.2\n",
+       "d    4.2\n",
+       "e    4.2\n",
+       "x    4.2\n",
+       "dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Scalar value (not a collection)\n",
+    "data = 4.2\n",
+    "\n",
+    "# Create Series\n",
+    "s = pd.Series(data)\n",
+    "display(s)\n",
+    "\n",
+    "# Value is repeated throughout the index\n",
+    "s2 = pd.Series(data, index=[\"i\", \"n\", \"d\", \"e\", \"x\"])\n",
+    "display(s2)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "---\n",
     "## DataFrame\n",
     "\n",
     "A series is a homogenous one-dimensional labeled array that can hold any data type (but only 1 type; homogenous). The axis labels are collectively referred to as the **index**.\n",
     "\n",
+    "---\n",
     "---"
    ]
   },
@@ -260,6 +337,24 @@
     "- structured or record ndarray\n",
     "- another DataFrame\n",
     "\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### **DataFrame:** Python dict as Data\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "**from series**: guide note  \n",
+    "When passing in a Python dict, the keys will act as the labels. If an index is passed, it will be the size of the Series instead of the data's size. If an index is passed, it will check against the dict keys, and order the Series according to the order of the index. Values in the index that do not exist in the dict passed to data will be represented as NaN.\n",
     "\n",
     "---\n"
    ]
@@ -294,6 +389,196 @@
     "df = pd.DataFrame(data)\n",
     "\n",
     "display(s, df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>one</th>\n",
+       "      <th>two</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   one  two\n",
+       "a  1.0  1.0\n",
+       "b  2.0  2.0\n",
+       "c  3.0  3.0\n",
+       "d  NaN  4.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>one</th>\n",
+       "      <th>two</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>d</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   one  two\n",
+       "d  NaN  4.0\n",
+       "b  2.0  2.0\n",
+       "a  1.0  1.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>two</th>\n",
+       "      <th>three</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>d</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   two three\n",
+       "d  4.0   NaN\n",
+       "b  2.0   NaN\n",
+       "a  1.0   NaN"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "d = {\n",
+    "    \"one\": pd.Series([1.0, 2.0, 3.0], index=[\"a\", \"b\", \"c\"]),\n",
+    "    \"two\": pd.Series([1.0, 2.0, 3.0, 4.0], index=[\"a\", \"b\", \"c\", \"d\"]),\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(d)\n",
+    "display(df)\n",
+    "\n",
+    "display(pd.DataFrame(d, index=[\"d\", \"b\", \"a\"]))\n",
+    "display(pd.DataFrame(d, index=[\"d\", \"b\", \"a\"], columns=[\"two\", \"three\"]))"
    ]
   }
  ],
